# keras3-crf

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  ci_backends.yml  release.yml  release_testpypi.yml
examples/: BiLSTM_CRF.ipynb  BiLSTM_CRF_Advanced.ipynb  BiLSTM_CRF_Core.ipynb  BiLSTM_CRF_Helper.ipynb  BiLSTM_CRF_Manual.ipynb  NER_End_to_End.ipynb  README.md  Torch_JAX_KerasCore_CRF.ipynb  __init__.py  benchmark_t1_vs_multi.py  bilstm_crf_manual.py  bilstm_crf_train.py  data_grain.py  data_pytorch_dataloader.py  delft_crf_wrapper_example.py  quickstart_jax.py  quickstart_tf.py  quickstart_torch.py  requirements-examples.txt  torch_jax_snippet.md  train_cli.py  train_lib.py
examples/data/: cleanconll_prepare.py  multiconer_prepare.py  sample.conll  sample_bilou.conll
examples/legacy/: BiLSTM_CRF.ipynb  BiLSTM_CRF_Advanced.ipynb
examples/utils/: data.py  data_multiconer.py  metrics.py  ner_metrics.py  report.py  traverse_keras_graph.py
src/keras_crf/: __init__.py  core_kops.py  crf_ops.py  layers.py  layers_core.py  losses.py  text.py  train_utils.py
src/keras_crf/rnn/: abstract_rnn_cell.py
src/keras_crf/utils/: types.py
tests/: conftest.py  test_backend_quick_smoke.py  test_core_compat.py  test_crf_marginals.py  test_crf_ops.py  test_dynamic_time_tf.py  test_dynamic_time_training.py  test_graph_mode.py  test_kops_core.py  test_layers.py  test_losses_api.py  test_ner_metrics.py  test_parity_tf_addons.py  test_ragged.py  test_smoke.py  test_text.py  test_tf_scan_repro.py  test_train_utils_dice.py
tf_keras_crf/: README.md  pyproject.toml
tf_keras_crf/src/tf_keras_crf/: __init__.py  layers.py  text.py
tf_keras_crf/src/tf_keras_crf/rnn/: abstract_rnn_cell.py
tf_keras_crf/src/utils/: types.py
tf_keras_crf/tests/: test_graph_mode.py
