[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tf-keras-crf"
version = "0.0.1"
description = "TensorFlow-specific CRF layer and ops for Keras 3 (companion to keras3-crf)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
  { name = "Keras3-CRF Maintainers" }
]
keywords = ["keras", "tensorflow", "crf", "sequence", "viterbi"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "tensorflow>=2.15",
  "keras>=3.0.0",
  "typeguard>=2.7,<5",
]

[project.urls]
Homepage = "https://github.com/homfunc/tf-keras-crf"
Repository = "https://github.com/homfunc/tf-keras-crf.git"
Issues = "https://github.com/homfunc/tf-keras-crf/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tf_keras_crf"]

